<resources>
    <!--    <string name="app_name">Chess MVP</string>-->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="send_password_reset_email">Change Password</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="verify_code">Verify Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend_code">Resend Verification Code</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">RESET PASSWORD</string>
    <string name="btn_back"><![CDATA[< Back To Login]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="prompt_password">Password</string>
    <string name="new_username">New Username</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_email">New Email</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to send you password reset instructions.</string>
    <string name="flip">FLIP</string>
    <string name="color_picker">Board Color</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="playervscomputer">Player Vs Computer</string>
    <string name="message">Message</string>
    <string name="result">Result</string>
    <string name="match_service">match_service</string>
    <string name="match_on_rating">Match on rating</string>
    <string name="rating_range">Rating Range</string>
    <string name="find_match">Find Match</string>
    <string name="random_matches">Random Matches</string>
    <string name="check">CHECK</string>
    <string name="stalemate">STALEMATE</string>
    <string name="checkmate">CHECKMATE</string>
    <string name="motto">Free. Fun. Engaging.</string>
    <string name="draw">DRAW</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="settings">Settings</string>
    <string name="rating">Rating : %1$d </string>
    <string name="play_online">Play Online</string>
    <string name="select_profile_photo">Select Profile Photo</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="match_exact_rating">Match is set on exact rating</string>
    <string name="end_match">End Match</string>
    <string name="save">Save Match</string>
    <string name="update">Update</string>
    <string name="games">Games</string>
    <string name="challenges">Challenges</string>
    <string name="forfeit">Forfeit</string>
    <string name="go_to_dashboard">Go To Dashboard</string>
    <string name="userVerification">Kindly verify email</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="profile">Profile</string>
    <string name="puzzles">Puzzles</string>
    <string name="create_puzzle_from_recording">Create puzzle from recording</string>
    <string name="create_puzzle">Create Puzzle</string>
    <string name="company">Iconic King</string>
    <string name="powered_by">Powered By</string>
    <string name="copyright">&#169; &#32; Iconic King</string>
    <string name="feature_unavailable">Feature Unavailable</string>
    <string name="analysis_board">Analysis Board</string>
    <string name="you_won">You Won</string>
    <string name="interrupted">Interrupted</string>
    <string name="timer_lapsed">Timer Lapsed</string>
    <string name="game_aborted">Game Aborted</string>
    <string name="abandonment">Game Abandoned</string>
    <string name="low_internet_connection">You Have Low Internet Connection</string>
    <string name="opponent_disconnected">Opponent Disconnected</string>
    <string name="opponent_won">%1$s Won</string>
    <string name="computer">Computer (Level %1$d)</string>
    <string name="analysis_prompt">Forfeit Match Analyze Game</string>
    <string name="yes">YES</string>
    <string name="computer_levels">Computer Levels</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="accept_terms">Accept Terms</string>
    <string name="play_friend">Play Friend</string>
    <string name="user_not_found">No user found</string>
    <string name="challenge">Challenge</string>
    <string name="challenge_service">challenge_service</string>
    <string name="disconnected">Disconnected</string>
    <string name="online_users">Online Users</string>
    <string name="tournaments">Tournaments</string>
    <string name="default_notification_channel_id">10077</string>
    <string name="accepting_challenge">Accepting Challenge</string>
    <string name="login_google">Login With Google Account</string>
    <string name="pgn_viewer">Chess MVP PGN Viewer</string>
    <string name="join_tournament">Join Tournament</string>
    <string name="view_tournament">View Tournament</string>
    <string name="offline_game_preference">Offline Game Preference</string>
    <string name="deposit">Deposit</string>
    <string name="play_chess">Play Chess</string>
    <string name="transactions">Transactions</string>
    <string name="kes_1000">KES 1000</string>
    <string name="balance">Balance:\u0020</string>
    <string name="_1000">1000</string>
    <string name="_254712695820">254712695820</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="remove_photo">Remove photo</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>
    <string name="chess_bet_user">Chess Bet user</string>
    <string name="play_chess_online">Play Chess Online</string>
</resources>