<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_marginBottom="5dp"
    android:background="@color/white"
    android:layout_height="wrap_content"
    app:cardMaxElevation="4sp"
    app:cardCornerRadius="5sp"
    app:cardElevation="4sp">

    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfilePic"
            android:src="@mipmap/ic_launcher"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <LinearLayout
            android:id="@+id/information"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/imgProfilePic"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imgProfilePic">
            <TextView
                android:id="@+id/txtUserName"
                android:text="@string/username"
                android:fontFamily="@font/chakrapetchbold"
                android:textSize="15sp"
                android:maxLength="30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_margin="3dp"
                android:id="@+id/txtEmail"
                android:text="@string/email"
                android:fontFamily="@font/chakrapetchbold"
                android:textSize="15sp"
                android:maxLength="30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <Button
            android:id="@+id/btnChallenge"
            android:padding="5dp"
            android:textSize="15sp"
            android:background="@drawable/rounded_selected_button"
            android:text="@string/challenge"
            android:fontFamily="@font/chakrapetchbold"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>



</androidx.cardview.widget.CardView>